# potion-de-vie

./: .gitignore  .pre-commit-config.yaml  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: 1764764559046-ci.yml  ci.yml
apps/home/: urls.py  views.py
apps/user/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
templates/base/: base.html  footer.html  navebarre.html
templates/home/: home.html  homepage.html
tests/: test_django_install.py
tests/tests_home/: tests_home.py
tests/tests_user/: tests_user.py
